Подготовка графики и текстовых стилей личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  
 </head>
 
 <body>
   <header class="main-header">
-    <img src="#" alt="Лого">
+    <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
     <div class="container">
       <!--     панель навигации в хедере-->
       <nav class="main-navigation">
@@ -94,8 +96,8 @@
                 </table>
                 <div class="separator"></div>
                 <span class="order-form-total">Итого: 750 руб.</span>
-                < class="red-btn order-form-btn">Оформить заказ
-                  </>
+                <a class="red-btn order-form-btn">Оформить заказ
+                  </a>
               </div>
 
             </div>
@@ -165,91 +167,90 @@
       <div class="col1">
 
         <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
+          <img src="../gllacy/img/item-1.png" alt="img-icecream" width="267" height="267">
           <span class="ice-item-price">310&#8381;    /кг</span>
           <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
-          <a class="red-btn">Быстрый просмотр</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
         </section>
-
         <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
+          <img src="../gllacy/img/item-2.png" alt="img-icecream" width="267" height="267">
           <span class="ice-item-price">380&#8381;    /кг</span>
           <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
-          <a class="red-btn">Быстрый просмотр</a>
+          <a class="red-btn" >Быстрый просмотр</a>
         </section>
 
         <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
+          <img src="../gllacy/img/item-3.png" alt="img-icecream" width="267" height="267">
           <span class="ice-item-price">355&#8381;    /кг</span>
           <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
-          <a class="red-btn">Быстрый просмотр</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
         </section>
 
         <section class="ice-item">
-          <img src="#" alt="img-icecream" width="#" height="#">
+          <img src="../gllacy/img/item-4.png" alt="img-icecream" width="267" height="267">
           <span class="ice-item-price">415&#8381;    /кг</span>
           <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
-          <a class="red-btn">Быстрый просмотр</a>
+          <a class="red-btn" href="#">Быстрый просмотр</a>
         </section>
       </div>
       <div class="col2">
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
+            <img src="../gllacy/img/item-5.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">325&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с брусничным джемом</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
+            <img src="../gllacy/img/item-6.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">410&#8381;    /кг</span>
             <span class="ice-item-name">Сливочно-черничное с цельными ягодами черники </span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
+            <img src="../gllacy/img/item-7.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">375&#8381;    /кг</span>
             <span class="ice-item-name">Сливочно-лимонное с карамельной присыпкой</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
+            <img src="../gllacy/img/item-8.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">320&#8381;    /кг</span>
             <span class="ice-item-name">Сливочное с шоколадной стружкой</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
       </div>
       <div class="col3">
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">440&#8381;    /кг</span>
+            <img src="../gllacy/img/item-9.png" alt="img-icecream" width="267" height="267">
+            <span class="ice-item-price">440&#8381;/кг</span>
             <span class="ice-item-name">Сливочно-ванильное с кусочками шоколада</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">435&#8381;    /кг</span>
+            <img src="../gllacy/img/item-10.png" alt="img-icecream" width="267" height="267">
+            <span class="ice-item-price">435&#8381;/кг</span>
             <span class="ice-item-name">Сливочноe с ментоловым сиропом</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
 
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">355&#8381;    /кг</span>
+            <img src="../gllacy/img/item-11.png" alt="img-icecream" width="267" height="267">
+            <span class="ice-item-price">355&#8381;/кг</span>
             <span class="ice-item-name">Сливочное с кусочками черного шоколада</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
           
           <section class="ice-item">
-            <img src="#" alt="img-icecream" width="#" height="#">
-            <span class="ice-item-price">420&#8381;    /кг</span>
+            <img src="../gllacy/img/item-12.png" alt="img-icecream" width="267" height="267">
+            <span class="ice-item-price">420&#8381;/кг</span>
             <span class="ice-item-name">Сливочное с мятным сиропом</span>
-            <button class="red-btn">Быстрый просмотр</button>
+            <a class="red-btn" href="#">Быстрый просмотр</a>
           </section>
           
       </div>
