--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
   <!--    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>-->
 
   <header class="main-header">
-    <img src="#" alt="Лого">
+    <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
     <div class="container">
       <nav class="main-navigation">
         <ul>
@@ -32,7 +33,7 @@
             <a href="#">О Компании</a>
           </li>
           <li>
-            <a href="catalog.html.html">Магазин</a>
+            <a href="catalog.html">Магазин</a>
           </li>
           <li>
             <a href="#">Контакты</a>
@@ -45,7 +46,7 @@
           <li>
             <div class="search">
               <a class="search-btn" href="#">
-                <img src="#" alt="поиск">
+                <!--            в css    <img src="#" alt="поиск">-->
               </a>
               <form class="search-form" action="#" method="post" name="search">
                 <input type="search" name="search" placeholder="Что ищем?">
@@ -55,7 +56,7 @@
           <!--          Кнопка входа и форма авторизации-->
           <li>
             <div class="login-form">
-              <a class="login icon" href="#"><img src="#" alt="Иконка входа">Вход</a>
+              <a class="login icon" href="#"><!--css              <img src="#" alt="Иконка входа">Вход</a>-->
               <form action="#" method="post">
                 <input type="email" name="email" placeholder="Электронная почта">
                 <input type="password" name="password" placeholder="Пароль">
@@ -70,7 +71,7 @@
           </li>
           <li>
             <div class="basket">
-              <a class="free" href="#"><img src="#" alt="Корзина">Пусто</a>
+<a class="free" href="#"><!--css              <img src="#" alt="Корзина">Пусто</a>-->
             </div>
           </li>
         </ul>
@@ -89,15 +90,15 @@
     <div class="site-wrapper">
       <div class="content-wrapper">
         <div class="slider">
-          <div class="slide slide1">
+          <div class="slide slide11 slide12">
             <h1 class="slide-title">Крем-брюле и пломбир с малиновым джемом</h1>
             <a class="red-btn slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide" id="slide2">
+          <div class="slide slide21 slide22">
             <h1 class="slide-title">Шоколадный пломбир и лимонный сорбет</h1>
             <a class="red-btn slide-btn" href="#">Давайте оба!</a>
           </div>
-          <div class="slide" id="slide3">
+          <div class="slide slide31 slide32">
             <h1 class="slide-title">Пломбир с помадкой и клубничный щербет</h1>
             <a class="red-btn slide-btn" href="#">Давайте оба!</a>
           </div>
@@ -180,29 +181,29 @@
     <div class="col1">
 
       <section class="ice-item hit-sales">
-        <img src="#" alt="img-icecream" width="#" height="#">
-        <span class="ice-item-price">310&#8381;    /кг</span>
+        <img src="../gllacy/img/item-1.png" alt="img-icecream" width="267" height="267">
+        <span class="ice-item-price">310&#8381;/кг</span>
         <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
         <a class="red-btn">Быстрый просмотр</a>
       </section>
 
       <section class="ice-item hit-sales">
-        <img src="#" alt="img-icecream" width="#" height="#">
-        <span class="ice-item-price">380&#8381;    /кг</span>
+        <img src="../gllacy/img/item2.png" alt="img-icecream" width="267" height="267">
+        <span class="ice-item-price">380&#8381;/кг</span>
         <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
         <a class="red-btn">Быстрый просмотр</a>
       </section>
 
       <section class="ice-item hit-sales">
-        <img src="#" alt="img-icecream" width="#" height="#">
-        <span class="ice-item-price">355&#8381;    /кг</span>
+        <img src="../gllacy/img/item3.png" alt="img-icecream" width="267" height="267">
+        <span class="ice-item-price">355&#8381;/кг</span>
         <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
         <a class="red-btn">Быстрый просмотр</a>
       </section>
 
       <section class="ice-item hit-sales">
-        <img src="#" alt="img-icecream" width="#" height="#">
-        <span class="ice-item-price">415&#8381;    /кг</span>
+        <img src="../gllacy/img/item4.png" alt="img-icecream" width="267" height="267">
+        <span class="ice-item-price">415&#8381;/кг</span>
         <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
         <a class="red-btn">Быстрый просмотр</a>
       </section>
@@ -218,10 +219,10 @@
     <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
     <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
   </section>
-  
+
   <section class="news-blog">
-<!--    <img src="#" alt="фон контейнера">-->
-<!--   фон уберу в css-->
+    <!--    <img src="#" alt="фон контейнера">-->
+    <!--   фон уберу в css-->
     <p>Новое в нашем блоге</p>
     <h3><a href="#">10  способов сервировки фруктовых щербетов к столу</a></h3>
   </section>
@@ -233,6 +234,7 @@
     </form>
   </section>
   <div class="map">
+   
     <!--   тут будет карта-->
 
     <!--   -->
@@ -248,7 +250,7 @@
         <a class="btn" open-feetback-form>Форма обратной связи</a>
         <div class="feedback-form">
           <form action="#" method="post">
-            <input type="text" name="feedback" placeholder="Как вас зовут?" required="">
+            <input type="text" name="feedback" placeholder="Как вас зовут?" required>
             <label class="hidden">Как вас зовут?</label>
             <button type="submit" class="red-btn send-feedback-btn">Отправить</button>
           </form>
