--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
             <!--          Кнопка входа и форма авторизации-->
             <div class="login">
-              <a class="login-icon" href="#">Вход</a>
+              <a class="user-block-btn" href="#">Вход</a>
               <div class="login-form hide-login-form">
                 <form action="#" method="post">
                   <input type="email" name="email" placeholder="Электронная почта">
                   <input type="password" name="password" placeholder="Пароль">
-                  <input class="login website slide-btn" type="button" name="button" value="Войти">
+                  <input class="login website red-btn" type="button" name="button" value="Войти">
                 </form>
                 <div class="forgot-check">
                   <a href="#">Забыли пароль?</a>
@@ -76,7 +76,7 @@
 
             <!--          корзина-->
             <div class="basket">
-              <a class="free" href="#">Пусто</a>
+              <a class="user-block-btn" href="#">Пусто</a>
             </div>
           </div>
         </div>
@@ -92,15 +92,15 @@
         <div class="slider">
           <div class="slide" id="slide1">
             <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
+            <a class="red-btn" href="#">Давайте оба!</a>
           </div>
           <div class="slide" id="slide2">
             <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
+            <a class="red-btn" href="#">Давайте оба!</a>
           </div>
           <div class="slide" id="slide3">
             <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
-            <a class="slide-btn" href="#">Давайте оба!</a>
+            <a class="red-btn" href="#">Давайте оба!</a>
           </div>
           <div class="slider-controls">
             <label for="btn-1"></label>
@@ -119,51 +119,52 @@
           <h2>Малинка даром</h2>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
           </p>
-          <a href="#" class="slide-btn">Хочу варенье!</a>
+          <a href="#" class="red-btn">Хочу варенье!</a>
         </article>
         <article class="chocolate-share">
           <h2>Шоколадки даром</h2>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
           </p>
-          <a href="#" class="slide-btn">Хочу шоколадки!</a>
+          <a href="#" class="red-btn">Хочу шоколадки!</a>
         </article>
       </section>
       <!--  Хиты продаж-->
-      <article class="wrapper-hit-sales">
-        <div class="col1-hit-sales">
-          <section class="ice-item1 hit-sales">
+      <article class="wrapper-ice-item">
+        <div class="col-ice-item">
+          <section class="ice-item">
             <img src="../img/item1.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">310&#8381;/кг</span>
             <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             <div class="hover-block">
-              <a class="slide-btn">Быстрый просмотр</a>
+              <a class="red-btn">Быстрый просмотр</a>
             </div>
           </section>
 
-          <section class="ice-item2 hit-sales">
+          <section class="ice-item">
             <img src="../img/item2.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">380&#8381;/кг</span>
             <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
             <div class="hover-block">
-              <a class="slide-btn">Быстрый просмотр</a>
-            </div>
+              <a class="red-btn">Быстрый просмотр</a>
+              </div>
+            
           </section>
 
-          <section class="ice-item3 hit-sales">
+          <section class="ice-item">
             <img src="../img/item3.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">355&#8381;/кг</span>
             <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
             <div class="hover-block">
-              <a class="slide-btn">Быстрый просмотр</a>
+              <a class="red-btn">Быстрый просмотр</a>
             </div>
           </section>
 
-          <section class="ice-item4 hit-sales">
+          <section class="ice-item">
             <img src="../img/item4.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">415&#8381;/кг</span>
             <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
             <div class="hover-block">
-              <a class="slide-btn">Быстрый просмотр</a>
+              <a class="red-btn">Быстрый просмотр</a>
             </div>
           </section>
         </div>
@@ -172,7 +173,6 @@
 
       <section class="about-shop">
         <h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-        <!--        <div class="about-shop-col1">-->
         <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
         <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
         <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
@@ -194,7 +194,7 @@
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <form class="subscribe-form" action="#" method="post">
             <input type="email" id="user-email" name="user-email" required placeholder="Электронная почта">
-            <button class="btn slide-btn" type="submit">Отправить</button>
+            <button class="btn red-btn" type="submit">Отправить</button>
           </form>
         </section>
       </div>
@@ -220,7 +220,7 @@
               <form action="#" method="post">
                 <input type="text" name="feedback" placeholder="Как вас зовут?" required>
                 <label class="hidden">Как вас зовут?</label>
-                <button type="submit" class="slide-btn send-feedback-btn">Отправить</button>
+                <button type="submit" class="red-btn send-feedback-btn">Отправить</button>
               </form>
             </div>
           </div>
