--- a/index.html
+++ b/index.html
@@ -80,13 +80,6 @@
             </div>
           </div>
         </div>
-        <!--время работы-->
-        <div class="work-time">
-          <div class="wrapper-work-time">
-            <p class="time work1">С 10 до 20, ежедневно</p>
-            <p class="time work2">8 812 450-25-25</p>
-          </div>
-        </div>
 
         <!--           слайдер-->
         <div class="slider">
@@ -111,6 +104,15 @@
         <!--        слайдер-->
       </header>
 
+             <main>
+              <!--время работы-->
+        <div class="work-time">
+
+            <p class="time work1">С 10 до 20, ежедневно</p>
+            <p class="time work2">8 812 450-25-25</p>
+          </div>
+
+
 
       <!--Блоки Выгодного предложения-->
 
@@ -130,7 +132,6 @@
       </section>
       <!--  Хиты продаж-->
       <article class="wrapper-ice-item">
-        <div class="col-ice-item">
           <section class="ice-item">
             <img src="../img/item1.png" alt="img-icecream" width="267" height="267">
             <span class="ice-item-price">310&#8381;/кг</span>
@@ -167,7 +168,6 @@
               <a class="red-btn">Быстрый просмотр</a>
             </div>
           </section>
-        </div>
 
       </article>
 
@@ -227,8 +227,9 @@
         </div>
       </div>
     </div>
+    </main>
     <footer class="main-footer">
-      <div class="footer-container">
+
 
         <section class="footer-social">
           <a class="social-btn social-btn-tw" href="#" alt="Твиттер"></a>
@@ -252,7 +253,7 @@
           <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
           <p>Сделано в <a href="https://htmlacademy.ru">HTML Academy © 2017</a></p>
         </section>
-      </div>
+
     </footer>
 
   </div>
