--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
+  <link rel="stylesheet" href="">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,13 +24,14 @@
 
 
         <div class="header-container">
-          <img src="../img/logo.png" alt="Лого" width="154" height="64">
+          <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
+<!--          Странная фигня творится с картинками. Они то включаются то выключаются и приходится то прописывать то убирать префикс ../gllacy -->
           <nav class="main-navigation">
-            <ul class="navigation">
+            <ul class="main-menu">
               <li>
                 <a href="catalog.html">Каталог</a>
                 <ul class="sub-menu">
-                  <li><a href="#1">Новинки</a></li>
+                  <li><a class="active" href="#1">Новинки</a></li>
                   <li><a href="#2">Сливочное</a></li>
                   <li><a href="#3">Щербеты</a></li>
                   <li><a href="#4">Фруктовый лед</a></li>
