--- a/catalog.html
+++ b/catalog.html
@@ -12,76 +12,128 @@
 <body>
 
   <div class="content-wrapper">
-    <header class="main-header">
-      <div class="header-container">
-        <img src="../img/logo.png" alt="Лого" width="154" height="64">
-        <nav class="main-navigation">
-          <ul class="navigation">
-            <li>
-              <a href="catalog.html">Каталог</a>
-              <ul class="sub-menu">
-                <li><a href="#1">Новинки</a></li>
-                <li><a href="#2">Сливочное</a></li>
-                <li><a href="#3">Щербеты</a></li>
-                <li><a href="#4">Фруктовый лед</a></li>
-                <li><a href="#5">Мелорин</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Доставка и оплата</a>
-            </li>
-            <li>
-              <a href="#">О Компании</a>
-            </li>
-          </ul>
-        </nav>
+   
+      <header class="main-header">
 
-        <div class="user-block">
 
-          <!--          кнопка поиска-->
+        <div class="header-container">
+          <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
+          <!--          Странная фигня творится с картинками. Они то включаются то выключаются и приходится то прописывать то убирать префикс ../gllacy -->
+          <nav class="main-navigation">
+            <ul class="main-menu">
+              <li>
+                <a href="catalog.html">Каталог</a>
+                <ul class="sub-menu">
+                  <li><a class="active" href="#1">Новинки</a></li>
+                  <li><a href="#2">Сливочное</a></li>
+                  <li><a href="#3">Щербеты</a></li>
+                  <li><a href="#4">Фруктовый лед</a></li>
+                  <li><a href="#5">Мелорин</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Доставка и оплата</a>
+              </li>
+              <li>
+                <a href="#">О Компании</a>
+              </li>
+            </ul>
+          </nav>
 
-          <div class="search">
-            <a class="search-btn" href="#"></a>
-            <div class="search-form hide-search-form">
+          <!--         user-block-->
+
+          <div class="user-block">
+
+            <!--          кнопка поиска-->
+
+            <a class="search user-block-btn" href="#"></a>
+            <div class="search-form">
               <form action="#" method="post" name="search">
                 <input type="search" name="search" placeholder="Что ищем?">
               </form>
             </div>
-          </div>
 
-          <!--          Кнопка входа и форма авторизации-->
-          <div class="login">
-            <a class="user-block-btn" href="#">Вход</a>
-            <div class="login-form hide-login-form">
+            <!--          Кнопка входа и форма авторизации-->
+
+            <a class="login user-block-btn" href="#">Вход</a>
+            <div class="login-form">
               <form action="#" method="post">
                 <input type="email" name="email" placeholder="Электронная почта">
                 <input type="password" name="password" placeholder="Пароль">
-                <input class="login website slide-btn" type="button" name="button" value="Войти">
+                <input class="login website red-btn" type="button" name="button" value="Войти">
               </form>
               <div class="forgot-check">
                 <a href="#">Забыли пароль?</a>
                 <a href="#">Новая регистрация</a>
               </div>
             </div>
+
+            <!--          корзина-->
+
+            <a class="basket user-block-btn" href="#">Пусто</a>
+
+
+
+              <div class="common-buttons-form common-buttons-form-basket">
+                <div class="basket-item">
+                  <button class="basket-item-delete"></button>
+                  <div class="basket-item-title">
+                    <img src="img/catalog/basket-item-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"> Пломбир с апельсиновым джемом
+                  </div>
+                  <div class="basket-item-count">
+                    1,5 кг x <span class="cost-per-kg">200 руб.</span>
+                  </div>
+                  <div class="basket-item-worth">
+                    300 руб.
+                  </div>
+                </div>
+                <div class="basket-item basket-item-last">
+                  <button class="basket-item-delete"></button>
+                  <div class="basket-item-title">
+                    <img src="img/catalog/basket-item-2.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада"> Клубничный пломбир с присыпкой из белого шоколада
+                  </div>
+                  <div class="basket-item-count">
+                    1,5 кг x <span class="cost-per-kg">300 руб.</span>
+                  </div>
+                  <div class="basket-item-worth">
+                    450 руб.
+                  </div>
+                </div>
+                <div class="total">
+                  Итого: 750 руб.
+                </div>
+                <div class="clearfix"></div>
+                <a class="red-btn" href="#">Оформить заказ</a>
+              </div>
+
+            </div>
+
+
+          <!--user-block-->
+
+          <!--           слайдер-->
+          <div class="slider">
+            <div class="slide" id="slide1">
+              <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
+              <a class="red-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slide" id="slide2">
+              <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+              <a class="red-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slide" id="slide3">
+              <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+              <a class="red-btn" href="#">Давайте оба!</a>
+            </div>
+            <div class="slider-controls">
+              <label for="btn-1"></label>
+              <label for="btn-2"></label>
+              <label for="btn-3"></label>
+            </div>
           </div>
-
-          <!--          корзина-->
-          <div class="basket">
-            <a class="user-block-btn basket-full" href="#">2 товара</a>
-          </div>
-        </div>
-
-        <!--время работы-->
-        <div class="work-time">
-
-          <p>С 10 до 20, ежедневно</p>
-          <p>8 812 450-25-25</p>
-
-        </div>
-
-      </div>
-
-    </header>
+          <!--        слайдер-->
+      </header>
+   
     <main>
       <nav class="breadcrumbs">
         <ul class="breadcrumbs-wrapper">
@@ -143,98 +195,98 @@
       <article class="wrapper-ice-item">
         <section class="ice-item">
           <img src="../img/item1.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">310&#8381;/кг</span>
+          <span class="ice-item-price">310&#8381;/<div class="kg">кг</div></span>
           <span class="ice-item-name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item2.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">380&#8381;/кг</span>
+          <span class="ice-item-price">380&#8381;/<div class="kg">кг</div></span>
           <span class="ice-item-name">Сливочно-кофейное с кусочками шоколада</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item3.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">355&#8381;/кг</span>
+          <span class="ice-item-price">355&#8381;/<div class="kg">кг</div></span>
           <span class="ice-item-name">Сливочно-клубничное с присыпкой из белого шоколада</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item4.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">415&#8381;/кг</span>
+          <span class="ice-item-price">415&#8381;/<div class="kg">кг</div></span>
           <span class="ice-item-name">Сливочное крем-брюле с карамельной подливкой</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item5.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">325&#8381;/кг</span>
+          <span class="ice-item-price">325&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочное с брусничным джемом</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item6.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">410&#8381;/кг</span>
+          <span class="ice-item-price">410&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочно-черничное с цельными ягодами черники </span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item7.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">375&#8381;/кг</span>
+          <span class="ice-item-price">375&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочно-лимонное с карамельной присыпкой</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item8.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">320&#8381;/кг</span>
+          <span class="ice-item-price">320&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочное с шоколадной стружкой</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item9.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">440&#8381;/кг</span>
+          <span class="ice-item-price">440&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочно-ванильное с кусочками шоколада</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item10.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">435&#8381;/кг</span>
+          <span class="ice-item-price">435&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочноe с ментоловым сиропом</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item11.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">355&#8381;/кг</span>
+          <span class="ice-item-price">355&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочное с кусочками черного шоколада</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
         <section class="ice-item">
           <img src="../img/item12.png" alt="img-icecream" width="267" height="267">
-          <span class="ice-item-price">420&#8381;/кг</span>
+          <span class="ice-item-price">420&#8381;/<span class="kg">кг</span></span>
           <span class="ice-item-name">Сливочное с мятным сиропом</span>
           <div class="hover-block">
-            <a class="red-btn" href="#">Быстрый просмотр</a>
+            <a class="red-btn btn-item-hover" href="#">Быстрый просмотр</a>
           </div>
         </section>
       </article>
