--- a/index.html
+++ b/index.html
@@ -242,13 +242,14 @@
         </div>
       </main>
       <footer class="main-footer">
+      <div class="footer-wrapper">
 
 
         <section class="footer-social">
-          <a class="social-btn social-btn-tw" href="#" alt="Твиттер">твитер</a>
-          <a class="social-btn social-btn-inst" href="#" alt="Инстаграм">инст</a>
-          <a class="social-btn social-btn-fb" href="#" alt="Фейсбук">фейс</a>
-          <a class="social-btn social-btn-vk" href="#" alt="Вконтакте">вк</a>
+          <a class="social-btn social-btn-tw" href="#" alt="Твиттер"></a>
+          <a class="social-btn social-btn-inst" href="#" alt="Инстаграм"></a>
+          <a class="social-btn social-btn-fb" href="#" alt="Фейсбук"></a>
+          <a class="social-btn social-btn-vk" href="#" alt="Вконтакте"></a>
         </section>
 
         <section class="footer-info">
@@ -266,7 +267,7 @@
           <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
           <p>Сделано в <a href="https://htmlacademy.ru">HTML Academy © 2017</a></p>
         </section>
-
+</div>
       </footer>
 
     </div>
