--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
             <!--          корзина-->
 
             <a class="basket user-block-btn" href="#">Пусто</a>
-
-
-
-
+            
             </div>
 
 
@@ -255,16 +252,17 @@
         <section class="footer-info">
           <div class="footer-info-column1">
             <a href="#">Для поставщиков</a>
-            <a href="#">Наши документы</a>
+            <a href="#">О производстве</a>
+            
           </div>
           <div class="footer-info-column2">
-            <a href="#">О производстве</a>
+            <a href="#">Наши документы</a>
             <a href="#">Экологические стандарты</a>
           </div>
         </section>
 
         <section class="footer-copyright">
-          <a href="https://htmlacademy.ru"><img src="../img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
+          <a href="https://htmlacademy.ru"><img src="../gllacy/img/htmlAcademy-footer.png" width="108px" height="38px" alt="logo-htmlacademy"></a>
           <p>Сделано в <a href="https://htmlacademy.ru">HTML Academy © 2017</a></p>
         </section>
 </div>
