1902 помощь с item hover-om

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
           <!--          Странная фигня творится с картинками. Они то включаются то выключаются и приходится то прописывать то убирать префикс ../gllacy -->
           <nav class="main-navigation">
-            <ul class="main-menu">
+            <ul class="main-menu index-menu">
               <li>
                 <a href="catalog.html">Каталог</a>
                 <ul class="sub-menu">
@@ -180,13 +180,10 @@
 
         <section class="about-shop">
           <h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-          <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-          <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-          <!--        </div>-->
-          <!--        <div class="about-shop-col2">-->
-
-          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          <p class="about-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          <p class="about-cow">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p class="about-leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          <p class="about-thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
           <!--        </div>-->
         </section>
         <div class="block-news-subscribe">
@@ -211,29 +208,30 @@
         </div>
         <div class="map-wrapper">
           <div class="map">
-
-
-            <!--   тут будет карта-->
-
-            <!--   -->
             <!--   контактное инфо-->
+            <div class="wrapper-map-contact">
             <div class="map-contact">
-              <p>Адрес главного офиса и офлайн магазина:</p>
-              <b>ул. Большая Конюшенная 19/8, Санкт-Петербург</b>
-              <p>Для заказов по телефону:</p>
+              <p>Адрес главного офиса<br>
+              и офлайн магазина:<br>
+              <b>ул. Большая Конюшенная<br>
+              19/8, Санкт-Петербург</b>
+              </p>
+              <p>Для заказов по телефону:<br>
               <b>8 812 450-25-25</b>
+              </p>
               <p>(с 10 до 20 ежедневно)</p>
+              <button type="submit" class="red-btn open-feedback-form">Форма обратной связи</button>
               <!--      Форма обратной связи-->
               <div class="feedback-form">
-                <a class="btn" open-feetback-form>Форма обратной связи</a>
-                <div class="feedback-form">
+              <div class="feedback-form-wrapper">
                   <form action="#" method="post">
                     <input type="text" name="feedback" placeholder="Как вас зовут?" required>
-                    <label class="hidden">Как вас зовут?</label>
+                    <label class="feedback-label-hidden">Как вас зовут?</label>
                     <button type="submit" class="red-btn send-feedback-btn">Отправить</button>
                   </form>
                 </div>
               </div>
+            </div>
             </div>
           </div>
         </div>
