--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 
 
       <div class="header-container">
-        <img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64">
+        <a href="index.html"><img src="../gllacy/img/logo.png" alt="Лого" width="154" height="64"></a>
         <!--          Странная фигня творится с картинками. Они то включаются то выключаются и приходится то прописывать то убирать префикс ../gllacy -->
         <nav class="main-navigation">
           <ul class="main-menu">
@@ -70,7 +70,7 @@
 
           <!--          корзина-->
 
-          <a class="basket user-block-btn" href="#">Пусто</a>
+          <a class="basket basket-catalog user-block-btn" href="#">2 товара</a>
 
 
 
