--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="catalog.html">Каталог</a>
                 <ul class="sub-menu">
                   <li><a class="active" href="#1">Новинки</a></li>
-                  <li><a href="#2">Сливочное</a></li>
+                  <li><a href=catalog.html>Сливочное</a></li>
                   <li><a href="#3">Щербеты</a></li>
                   <li><a href="#4">Фруктовый лед</a></li>
                   <li><a href="#5">Мелорин</a></li>
@@ -225,8 +225,12 @@
               <div class="feedback-form">
               <div class="feedback-form-wrapper">
                   <form action="#" method="post">
+                   
                     <input type="text" name="feedback" placeholder="Как вас зовут?" required>
                     <label class="feedback-label-hidden">Как вас зовут?</label>
+                    <input type="email" name="feedback" placeholder="Введите адрес почты" required>
+                     <label class="feedback-label-hidden">Введите адрес почты</label>
+                    
                     <button type="submit" class="red-btn send-feedback-btn">Отправить</button>
                   </form>
                 </div>
